src/Server.module.css
.header {
  display: flex;
  align-items: center;
  padding: 6px;
  border-radius: 4px;
  color: var(--text-color);
  background-color: var(--pane-darker);
  text-decoration: none;
  gap: 12px;
  .appName {
    font-size: 18px;
    font-weight: bold;
  }
  .slogan {
    opacity: 0.6;
    font-size: 12px;
  }
  .logo {
    width: 36px;
    height: 36px;
    border-radius: 50%;
    background-color: black;
  }
}


.footer {
  display: flex;
  align-items: center;
  padding: 6px;
  border-radius: 4px;
  color: var(--text-color);
  background-color: var(--pane-darker);
  font-weight: bold;
  text-decoration: none;
  gap: 12px;

  .joinButton {
    display: flex;
    align-items: center;
    padding: 8px;
    border-radius: 4px;
    color: var(--text-color);
    background-color: var(--primary);
    font-size: 16px;
    font-weight: bold;
  }
  .serverInfo {
    flex: 1;
    font-size: 18px;
    .memberCount {
      color: var(--success);
      font-size: 12px;
    }
  }
}

.memberList {
  display: flex;
  overflow-y: auto;
  flex: 1;
  flex-direction: column;
  padding: 6px;
  border-radius: 4px;
  background-color: var(--pane);
  gap: 6px;
}

.avatarContainer {
  display: flex;
  overflow: hidden;
  flex-shrink: 0;
  border-radius: 50%;
  object-fit: cover;
}

.memberInfo {
  display: flex;
  overflow: hidden;
  align-items: center;
  gap: 6px;
  .statusDot {
    flex-shrink: 0;
    width: 8px;
    height: 8px;
    border-radius: 50%;
  }
}
.memberName {
  overflow: hidden;
  opacity: 0.8;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 14px;
}


.activityList {
  display: flex;
  gap: 6px;

}
.activityItem  {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  width: 160px;
  padding: 6px;
  border-radius: 6px;
  background-color: var(--pane-darker);
  gap: 6px;
  .activityUser {
    display: flex;
    font-weight: bold;
    gap: 6px;
  }
  .activityInfo, .activityName, .activityTitle {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  .activityName {
    opacity: 0.6;
    font-size: 14px;
  }
  .activityTitle {
    opacity: 0.8;
    font-size: 12px;

  }
}

